Create a sort mechanism and allow rank sorting (#2)

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,13 @@ input.search:focus {
   transform: scale(2);
 }
 
+/* Filter */
+
+.sort-default {
+  cursor: pointer;
+  color: hsl(217, 71%, 53%);
+}
+
 /* Albums */
 
 .album-title a {
